# Ai-based-Drone-Surveillance-for-Waste-Management

./: .env.example  .gitignore  README.md  howtorun.md  pyproject.toml  requirement.txt
configs/: airsim_scenarios.json  dronewaste.json  edge_profiles.json  finetune_dronewaste.json  severity_policy.json
dashboard/: app.js  index.html  styles.css
data/: sample_events.json
data/synthetic/: airsim_synthetic_dataset.json  dronewaste_vlm_dataset.json  vlm_finetune_specs.json
database/: schema.sql
docs/: AIRSIM_SIMULATION.md  ARCHITECTURE.md  DASWM_DRONEWASTE_DATASET.md  EDGE_OPTIMIZATION.md  RAG_AND_DATABASE.md  VLM_FINETUNING.md
environmental_os/: __init__.py  demo.py  policy.py  reporting.py  schemas.py
environmental_os/airsim_bridge/: __init__.py  client.py  scenarios.py
environmental_os/central/: __init__.py  api.py  orchestrator.py  swarm.py
environmental_os/dataset/: __init__.py  dronewaste.py  synthetic.py
environmental_os/db/: __init__.py  repository.py
environmental_os/drone/: __init__.py  frame_buffer.py  patrol.py
environmental_os/edge/: __init__.py  optimization.py  pipeline.py  scheduler.py
environmental_os/fusion/: __init__.py  multimodal.py
environmental_os/geo/: __init__.py  fence.py
environmental_os/intelligence/: __init__.py  (+3 more)
models/: README.md
scripts/: build_dronewaste_vlm_dataset.py  export_finetune_specs.py  finetune_dronewaste.py  generate_synthetic_dataset.py  prepare_project.py  run_demo.py  run_dronewaste_patrol_demo.py
tests/: test_dronewaste_dataset.py  test_extended_system.py  test_reasoning_pipeline.py
(+13 files in other folders)
